Bug 427632 - Timestamps not shown in KDE print queue
Summary: Timestamps not shown in KDE print queue
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_printer_manager (other bugs)
Version First Reported In: 5.27.5
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Nicoletti
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-13 13:34 UTC by chris
Modified: 2025-10-04 14:56 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chris 2020-10-13 13:34:41 UTC
SUMMARY
No timestamps are shown in KDE Print Queue Columns

STEPS TO REPRODUCE
1. Print something
2. Open KDE Print Queue & Select 'Completed Jobs'

OBSERVED RESULT
Columns marked 'Created', 'Completed', 'Processed' are all blank.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 chris 2020-10-13 13:37:34 UTC
Apologies, didn't see rest of template:
EXPECTED RESULT
Columns should have date/timestamps in them.> 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Opensuse Leap 15.2, 
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.71.0
Qt Version: 5.12.7
Comment 2 chris 2024-01-17 16:11:46 UTC
Still present in:
Operating System: openSUSE Leap 15.5
KDE Plasma Version: 5.27.9
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 5.14.21-150500.55.39-default (64-bit)
Graphics Platform: X11
Comment 3 TraceyC 2025-02-12 20:45:23 UTC
Confirmed on git-master
In the CUPS UI, I see date and timestamps for all completed print jobs
The queue accessed from kcm_printer_manager shows nothing under "Created", "Processed" or "Completed"
Comment 4 Bug Janitor Service 2025-10-02 14:27:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/print-manager/-/merge_requests/282
Comment 5 Mike 2025-10-02 14:38:20 UTC
Git commit a7e8b9cea8bf67a5935932953096ecb19997a7a5 by Mike Noe.
Committed on 02/10/2025 at 14:23.
Pushed by noee into branch 'master'.

libkcups: Fix call to datetime create from CUPS
FIXED-IN: 6.4

M  +3    -3    src/libkcups/KCupsJob.cpp

https://invent.kde.org/plasma/print-manager/-/commit/a7e8b9cea8bf67a5935932953096ecb19997a7a5
Comment 6 Mike 2025-10-02 14:49:52 UTC
Git commit 1a6fc40aeae74b7089d3c92424a6538b27057eaa by Mike Noe.
Committed on 02/10/2025 at 14:41.
Pushed by noee into branch 'Plasma/6.5'.

libkcups: Fix call to datetime create from CUPS
FIXED-IN: 6.4


(cherry picked from commit a7e8b9cea8bf67a5935932953096ecb19997a7a5)

Co-authored-by: Mike Noe <noeerover@gmail.com>

M  +3    -3    src/libkcups/KCupsJob.cpp

https://invent.kde.org/plasma/print-manager/-/commit/1a6fc40aeae74b7089d3c92424a6538b27057eaa
Comment 7 Mike 2025-10-02 14:53:20 UTC
Git commit 5a1611a3e456f3200ffeb15ce989bcecb7b87f86 by Mike Noe.
Committed on 02/10/2025 at 14:43.
Pushed by noee into branch 'Plasma/6.4'.

libkcups: Fix call to datetime create from CUPS
FIXED-IN: 6.4


(cherry picked from commit a7e8b9cea8bf67a5935932953096ecb19997a7a5)

Co-authored-by: Mike Noe <noeerover@gmail.com>

M  +3    -3    src/libkcups/KCupsJob.cpp

https://invent.kde.org/plasma/print-manager/-/commit/5a1611a3e456f3200ffeb15ce989bcecb7b87f86