libkcups: Fix call to datetime create from CUPS

BUG: 427632
FIXED-IN: 6.4