src/libkcups/KCupsJob.cpp
@@ -61,7 +61,7 @@ QDateTime KCupsJob::createdAt() const
     QDateTime ret;
     const auto it = m_arguments.constFind(KCUPS_TIME_AT_CREATION);
     if (it != m_arguments.constEnd()) {
-        ret.fromSecsSinceEpoch(it.value().toInt());
+        ret = ret.fromSecsSinceEpoch(it.value().toInt());
     }
     return ret;
 }
@@ -71,7 +71,7 @@ QDateTime KCupsJob::completedAt() const
     QDateTime ret;
     const auto it = m_arguments.constFind(KCUPS_TIME_AT_COMPLETED);
     if (it != m_arguments.constEnd()) {
-        ret.fromSecsSinceEpoch(it.value().toInt());
+        ret = ret.fromSecsSinceEpoch(it.value().toInt());
     }
     return ret;
 }
@@ -81,7 +81,7 @@ QDateTime KCupsJob::processedAt() const
     QDateTime ret;
     const auto it = m_arguments.constFind(KCUPS_TIME_AT_PROCESSING);
     if (it != m_arguments.constEnd()) {
-        ret.fromSecsSinceEpoch(it.value().toInt());
+        ret = ret.fromSecsSinceEpoch(it.value().toInt());
     }
     return ret;
 }
